--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -417,7 +417,7 @@
 									</div>
 
 									<div style="background-color: var(--fondoBotonPequeño); padding: 1px; flex: 1;">
-										<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
+										<img src="@noticia.Imagen" style="width: 100%; height: 223px; object-fit: contain;" alt="@noticia.TituloEn" />
 									</div>
 
 									<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
